# catch-a-phish

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  devsecops.yml
backend/: Cargo.toml  Dockerfile
backend/src/: detector.rs  extractor.rs  main.rs  routes.rs  spamhaus.rs  ssl_check.rs  traffic.rs  whois.rs
chrome/: manifest.json
chrome/popup/: popup.html
chrome/scripts/: URL_of_anchor.py  new.py  request_urls.py  subdomain.py
docs/: aws-bootstrap.md
firefox/: background.js  manifest.json  popup.html  popup.js
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: audit_branch_protection.py  build_extensions.py  consolidate_security_report.py
security/openapi/: backend-api.yaml
