[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11",default-features = false ,features = ["json", "rustls-tls"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSL/TLS
rustls = "0.23"

tokio-rustls = "0.24"
rustls-native-certs = "0.6"
webpki = "0.22"

# WHOIS
whois-rust = "1.6.0"

# Date/time utilities
chrono = { version = "0.4", features = ["serde"] }

# Domain parsing
url = "2.5"

# HTML parsing
scraper = "0.18"

# Regex
regex = "1.10"
